--- a/.env
+++ b/.env
@@ -12,3 +12,10 @@ JWT_SECRET=your-super-secret-jwt-key-here-make-it-long-and-random
 
 # Environment
 NODE_ENV=development
+
+
+# --- MAILTRAP CREDENTIALS ---
+MAILTRAP_HOST=sandbox.smtp.mailtrap.io
+MAILTRAP_PORT=2525
+MAILTRAP_USER=your_mailtrap_user_from_the_website
+MAILTRAP_PASS=your_mailtrap_password_from_the_website
